--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,13 @@
 		<version>1.0.1-SNAPSHOT</version>
 		<type>lutece-plugin</type>
 	</dependency>
+        
+         <dependency>
+		<groupId>fr.paris.lutece.plugins</groupId>
+		<artifactId>plugin-openam-identity-client</artifactId>
+		<version>1.0.1-SNAPSHOT</version>
+		<type>lutece-plugin</type>
+	</dependency>
       
     </dependencies>
 	
