--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-  
     <parent>
         <artifactId>lutece-global-pom</artifactId>
         <groupId>fr.paris.lutece.tools</groupId>
         <version>3.0.3</version>
     </parent>
-   
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>fr.paris.lutece.plugins</groupId>
@@ -15,17 +13,30 @@
     <version>1.0.0-SNAPSHOT</version>
     <name>Lutece Module grusupply OpenAM</name>
     
-    
-    
-     <repositories>
+    <repositories>
+        <repository>
+            <id>luteceSnapshot</id>
+            <name>luteceSnapshot</name>
+            <url>http://dev.lutece.paris.fr/snapshot_repository</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
         <repository>
             <id>lutece</id>
             <name>luteceRepository</name>
             <url>http://dev.lutece.paris.fr/maven_repository</url>
-            <layout>default</layout>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
         </repository>
-    </repositories>    
-    
+    </repositories>
 	
     <dependencies>
     	
@@ -38,7 +49,7 @@
         
           <dependency>
 		<groupId>fr.paris.lutece.plugins</groupId>
-		<artifactId>plugin-costumerprovisionning</artifactId>
+		<artifactId>plugin-grusupply</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 		<type>lutece-plugin</type>
 	</dependency>
@@ -49,23 +60,9 @@
 		<version>1.0.1-SNAPSHOT</version>
 		<type>lutece-plugin</type>
 	</dependency>
-	
-	
-  <dependency>
-		<groupId>fr.paris.lutece.plugins</groupId>
-		<artifactId>plugin-openam-identity-client</artifactId>
-		<version>1.0.1-SNAPSHOT</version>
-		<type>lutece-plugin</type>
-	</dependency>
         
-         <dependency>
-		<groupId>fr.paris.lutece.plugins</groupId>
-		<artifactId>module-mylutece-openam</artifactId>
-		<version>1.0.2-SNAPSHOT</version>
-		<type>lutece-plugin</type>
-	</dependency>
-        
-        
+       
+      
     </dependencies>
 	
     <properties>
