--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>module-customerprovisioning-openam</artifactId>
     <packaging>lutece-plugin</packaging>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <name>Lutece Module customer provisioning OpenAM</name>
        
     
@@ -65,7 +65,7 @@
         <connection>scm:git:https://github.com/lutece-secteur-public/gru-module-customerprovisioning-openam.git</connection>
         <developerConnection>scm:git:https://github.com/lutece-secteur-public/gru-module-customerprovisioning-openam.git</developerConnection>
         <url>https://github.com/lutece-secteur-public/gru-module-customerprovisioning-openam.git</url>
-      <tag>module-customerprovisioning-openam-1.0.0</tag>
+      <tag>HEAD</tag>
   </scm>
     
 </project>
