--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
            <dependency>
 		<groupId>fr.paris.lutece.plugins</groupId>
 		<artifactId>plugin-customerprovisioning</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>[1.0.0-SNAPSHOT,)</version>
 			<type>lutece-plugin</type>
 	</dependency>
         
